# RAYFORGE-3D

./: CMakeLists.txt  CMakeLists_CPU_VERSION.txt  README.md
CPU_VERSION_SRC/: main.cpp
CPU_VERSION_SRC/include/: camera.h  color.h  common.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  sphere.h  vec3.h
libraries/glad/include/glad/: gl.h  glad.h
libraries/glad/src/: gl.c  glad.c
src/: main.cpp
src/include/: camera.h  compute.h  ray_tracing.h  scene.h  screen_tex.h
